// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Del checkGrammar 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del checkGrammar 2`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del checkGrammar 3`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del checkGrammar 4`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del checkHighlight 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del checkHighlight 2`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del checkHighlight 3`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del checkHighlight 4`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del checkSpaces 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del checkSpaces 2`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del checkSpaces 3`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del checkSpaces 4`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del className 1`] = `
<del
  className="uu5-bricks-del my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del content 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</del>
`;

exports[`UU5.Bricks.Del content 2`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</del>
`;

exports[`UU5.Bricks.Del content 3`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</del>
`;

exports[`UU5.Bricks.Del content 4`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</del>
`;

exports[`UU5.Bricks.Del controlled 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del controlled 2`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del controlled 3`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del controlled 4`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del default props 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del disabled 1`] = `
<del
  className="uu5-bricks-del uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</del>
`;

exports[`UU5.Bricks.Del disabled 2`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del disabled 3`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del disabled 4`] = `
<del
  className="uu5-bricks-del uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</del>
`;

exports[`UU5.Bricks.Del dynamic 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del dynamic 2`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del dynamic 3`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del dynamic 4`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del example docKit UU5.Bricks.Del render without crash 1`] = `
<p
  className="uu5-bricks-p"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is "
  />
  <Del
    className={null}
    content={null}
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID02"
    ignoreInnerHTML={false}
    key="uuID02"
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  >
    deleted
  </Del>
  <UU5.Common.TextCorrectorContextConsumer
    key="2"
    text="text"
  />
</p>
`;

exports[`UU5.Bricks.Del hidden 1`] = `
<del
  className="uu5-bricks-del uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del hidden 2`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del hidden 3`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del hidden 4`] = `
<del
  className="uu5-bricks-del uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del id 1`] = `
<del
  className="uu5-bricks-del"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del ignoreHTML 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del ignoreHTML 2`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del ignoreHTML 3`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del ignoreHTML 4`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del mainAttrs 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del name 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del noIndex 1`] = `
<del
  className="uu5-bricks-del uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del noIndex 2`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del noIndex 3`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del noIndex 4`] = `
<del
  className="uu5-bricks-del uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del selected 1`] = `
<del
  className="uu5-bricks-del uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del selected 2`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del selected 3`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del selected 4`] = `
<del
  className="uu5-bricks-del uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del style 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Del style 2`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Del style 3`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Del style 4`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Del textCorrector 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del textCorrector 2`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del textCorrector 3`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del textCorrector 4`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Del tooltip 1`] = `
<del
  className="uu5-bricks-del"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
